2007-01-21  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/DocumentManager.java:
		add method to rotate objects around the center of
		there bounding boxes.

	* src/de/intevation/printlayout/tools/Arrows.java:
		dont create any precalculated arrows any longer.
		if needed they are carve on the fly. ;-)

	* src/de/intevation/printlayout/GeometricMath.java:
		added. intended to store simple geometrical functions

	* src/de/intevation/printlayout/tools/OnScreenBox.java,
		src/de/intevation/printlayout/tools/PickingInteractor.java:
		GUI support for rotation.

2007-01-20  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/DocumentManager.java:
		- added interface AfterDocumentModification. potentially useful
		  if one wants to update the selection after group/ungroup.
		- added scaleIDs() to scale selected elements proportional.

	* src/de/intevation/printlayout/LayoutCanvas.java:
		add damageRegions() to hint the RenderingManager that
		a list of regions need to be a repaint. This is too slow!

	* src/de/intevation/printlayout/tools/Arrows.java:
		shifted the arrow y coordinates all to negative.

	* src/de/intevation/printlayout/tools/OnScreenBox.java:
		on screen overlay element used by PickingInteractor.
		offers decoration (arrows).

	* src/de/intevation/printlayout/tools/PickingInteractor.java:
		- uses now the external OnScreenBox 
		- scale and translate are modeled with the 
	    new TransformOperation interface.

2007-01-19  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/DocumentManager.java:
		fix a bug in ungroup: swaped order of matrix multiplication
		displaced new children.

2007-01-19  Sascha L. Teichmann <sascha.teichmann@intevation.de>

	* src/de/intevation/printlayout/tools/PickingInteractor.java:
		- don't store the transformed shape for overlays any more 
		  only the tranformed vertex points -> needed for scale/rotate handles
